--- a/src/app/features/client/client-events/client-events.component.scss
+++ b/src/app/features/client/client-events/client-events.component.scss
@@ -1,11 +1,15 @@
 /* events.component.scss */
 
 .events-container {
-  @apply grid grid-cols-1 gap-4 md:m-10;
+  @apply grid grid-cols-1 gap-4;
 }
 
 .event-card {
-  @apply cursor-pointer bg-white p-6 rounded-lg shadow-lg transition-transform transform hover:scale-105 overflow-hidden relative m-4 flex flex-col md:flex-row; /* flex-col for mobile, flex-row for desktop */
+  @apply cursor-pointer transition-transform transform hover:scale-105 overflow-hidden relative; /* flex-col for mobile, flex-row for desktop */
+
+  .event-content-container {
+    @apply  flex flex-col md:flex-row;
+  }
 
   .event-thumbnail {
     @apply w-full h-48 object-cover rounded-lg mb-4 md:w-48 md:h-auto md:mr-6; /* Thumbnail full width on mobile, fixed size on desktop */
@@ -13,10 +17,6 @@
 
   .event-content {
     @apply flex flex-col;
-
-    .event-title {
-      @apply text-xl font-semibold text-gray-800 mb-2;
-    }
 
     .event-date {
       @apply text-sm text-gray-500 mb-2;
