--- a/src/app/features/venue-viewer/venue-viewer.component.scss
+++ b/src/app/features/venue-viewer/venue-viewer.component.scss
@@ -1,17 +1,25 @@
-.schematic-viewer {
-  position: relative;
+.venue-viewer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 600px;
-  overflow: hidden;
-  background-color: #f0f0f0;
+  position: relative;
 }
 
-.schematic-content {
-  position: absolute;
-  top: 0;
-  left: 0;
+svg {
+  width: 100%;
+  height: 100%;
+  margin: 20px 0;
 }
 
-.schematic-object {
-  display: inline-block;
+.controls {
+  display: flex;
+  gap: 20px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
