--- a/src/app/core/components/nav-bar/nav-bar.component.html
+++ b/src/app/core/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,3 @@
-<!-- src/app/navbar/navbar.component.html -->
-
 <nav class="bg-gray-800 p-4">
   <div class="max-w-7xl mx-auto flex justify-between items-center">
     <!-- Logo -->
@@ -9,13 +7,22 @@
 
     <!-- Desktop Navbar Links -->
     <div class="hidden md:flex space-x-4">
-      @for (item of menuItems; track $index) {
-      <a
-        [routerLink]="item.route"
-        routerLinkActive="underline text-white"
-        class="text-gray-400 hover:text-white"
-      >{{item.label}}</a>
-      }
+      <ng-container *ngFor="let item of menuItems; let i = index">
+        <a
+          [routerLink]="item.route"
+          routerLinkActive="underline text-white"
+          class="text-gray-400 hover:text-white"
+        >
+          {{ item.label }}
+        </a>
+      </ng-container>
+
+      <!-- Log Out Button (Visible only when logged in) -->
+      <button *ngIf="isLoggedIn$ | async"
+              (click)="logOut()"
+              class="text-gray-400 hover:text-white border border-gray-400 px-3 py-1 rounded">
+        Log Out
+      </button>
     </div>
 
     <!-- Mobile Hamburger Icon -->
@@ -47,12 +54,21 @@
     *ngIf="isMenuOpen"
     class="md:hidden bg-gray-800 text-gray-400 p-4 space-y-4"
   >
-    @for (item of menuItems; track $index) {
-    <a
-      [routerLink]="item.route"
-      routerLinkActive="underline text-white"
-      class="block hover:text-white"
-    >{{item.label}}</a>
-    }
+    <ng-container *ngFor="let item of menuItems; let i = index">
+      <a
+        [routerLink]="item.route"
+        routerLinkActive="underline text-white"
+        class="block hover:text-white"
+      >
+        {{ item.label }}
+      </a>
+    </ng-container>
+
+    <!-- Logout Button -->
+    <button *ngIf="isLoggedIn$ | async"
+            (click)="logOut()"
+            class="text-gray-400 hover:text-white border border-gray-400 px-3 py-1 rounded">
+      Log Out
+    </button>
   </div>
 </nav>
