--- a/src/app/features/venue-viewer/venue-viewer.component.scss
+++ b/src/app/features/venue-viewer/venue-viewer.component.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 600px;
+  height: 100%;
   position: relative;
 }
 
 svg {
   width: 100%;
   height: 100%;
-  margin: 20px 0;
+  flex-grow: 1;
 }
 
 .controls {
