--- a/src/app/features/client/ticket-booking/components/ticket-selector/ticket-selector.component.html
+++ b/src/app/features/client/ticket-booking/components/ticket-selector/ticket-selector.component.html
@@ -1,5 +1,12 @@
-<div class="flex gap-2 flex-col lg:flex-row mb-4 min-h-[80vh]">
-  <app-venue-viewer class="lg:flex-grow lg:basis-2/3 h-[50vh] lg:h-[70vh]"></app-venue-viewer>
-  <app-ticket-cart class="lg:flex-grow lg:basis-1/3 h-[50vh] lg:h-[70vh]"></app-ticket-cart>
+<h1>Select seats</h1>
+
+<div class="flex gap-2 flex-col lg:flex-row my-4 min-h-[65vh]">
+  <app-venue-viewer class="lg:flex-grow lg:basis-2/3 h-[50vh] lg:h-[65vh]"></app-venue-viewer>
+  <div class="lg:flex-grow lg:basis-1/3 h-[50vh] lg:h-[65vh] flex flex-col">
+    <app-ticket-cart class="flex-grow"></app-ticket-cart>
+    @if ((tickets$ | async | keyvalue); as data) {
+      <button class="btn btn-primary mt-4" [disabled]="!data?.length" (click)="navigateToCheckout()">To payment</button>
+    }
+  </div>
 </div>
 
