--- a/src/app/features/account/account.component.html
+++ b/src/app/features/account/account.component.html
@@ -3,8 +3,9 @@
     <!-- Profile Card -->
     <div class="bg-white shadow rounded-lg">
       <!-- Header -->
-      <div class="px-6 py-5 border-b border-gray-200">
+      <div class="px-6 py-5 border-b border-gray-200 flex justify-between">
         <h3 class="text-2xl font-semibold text-gray-900">Account Profile</h3>
+        <button class="btn btn-danger" (click)="logOut()">Sign out</button>
       </div>
 
       <!-- Profile Content -->
