--- a/src/app/features/client/client-cart/client-cart.component.html
+++ b/src/app/features/client/client-cart/client-cart.component.html
@@ -11,7 +11,7 @@
     <hr class="my-4">
     <h1>Select payment method:</h1>
     <div class="flex flex-wrap justify-center gap-4 p-6 mt-4 rounded bg-[#DDDDDD]">
-      <button class="btn btn-primary payment-button" (click)="makePayment()">
+      <button class="btn btn-primary payment-button" (click)="handleCash()">
         Cash
       </button>
       <button class="btn btn-primary payment-button" (click)="handleBlik()">
